
syntax = "proto3";

import "common.proto";
package proto.image_annotations;

message ImageAnnotations {
    int64 sequenceNum = 1;
    Timestamp ts = 2;
    Timestamp tsDevice = 3;
    repeated ImageAnnotation annotations = 4;
}

message ImageAnnotation {
    repeated CircleAnnotation circles = 1;
    repeated PointsAnnotation points = 2;
    repeated TextAnnotation texts = 3;
}

message CircleAnnotation {
    Point2f position = 1;
    float diameter = 2;
    float thickness = 3;
    Color fillColor = 4;
    Color outlineColor = 5;
}

message PointsAnnotation {
    PointsAnnotationType type = 1;
    repeated Point2f points = 2;
    Color outlineColor = 3;
    repeated Color outlineColors = 4;
    Color fillColor = 5;
    float thickness = 6;
}

enum PointsAnnotationType {
    UNKNOWN = 0;
    POINTS = 1;
    LINE_LOOP = 2;
    LINE_STRIP = 3;
    LINE_LIST = 4;
}
message TextAnnotation {
    Point2f position = 1;
    string text = 2;
    float fontSize = 3;
    Color textColor = 4;
    Color backgroundColor = 5;
}
